--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
 }
 
 .jumbotron{
-	padding: 70px 30px 70px 30px;
+	padding: 80px 30px 40px 30px;
 	margin: 0px auto;
 	background: lightblue;
 	color:midnightblue;
@@ -37,4 +37,8 @@
 
 .navbar-dark{
 	background-color: #512DA8;
+}
+
+.h2inline{
+	display: inline-block;
 }
